-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
None
-
-
4662e8075 (dev), 24cc41f77 (6.7), daa5b56cd (6.6), 07408b1c1 (tqtc/lts-6.5)
qtbase 270315e019a569bebf83e7c293b44f36c555fb3c
Arch Linux on arm64, a vm in VMware Fusion
$ uname -a Linux myhostname 6.7.9-1-aarch64-ARCH #1 SMP PREEMPT_DYNAMIC Tue Mar 12 11:20:09 MDT 2024 aarch64 GNU/Linux $ gcc --version gcc (GCC) 12.1.0 Copyright (C) 2022 Free Software Foundation, Inc. This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
Error
FAILED: src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o /usr/bin/c++ -DHAVE_CONFIG_H -DQT_BOOTSTRAPPED -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_STRICT_QLIST_ITERATORS -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQT_VERSION_MAJOR=6 -DQT_VERSION_MINOR=8 -DQT_VERSION_PATCH=0 -DQT_VERSION_STR=\"6.8.0\" -D_GLIBCXX_ASSERTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/home/liangqi/qt/qtbase-build/src/corelib/Core_autogen/include -I/home/liangqi/qt/qtbase-build/include -I/home/liangqi/qt/qtbase-build/include/QtCore -I/home/liangqi/qt/qtbase/src/corelib -I/home/liangqi/qt/qtbase-build/src/corelib -I/home/liangqi/qt/qtbase-build/src/corelib/global -I/home/liangqi/qt/qtbase-build/src/corelib/kernel -I/home/liangqi/qt/qtbase/src/corelib/../3rdparty/tinycbor/src -I/home/liangqi/qt/qtbase-build/include/QtCore/6.8.0 -I/home/liangqi/qt/qtbase-build/include/QtCore/6.8.0/QtCore -I/home/liangqi/qt/qtbase/src/corelib/../3rdparty/forkfd -I/home/liangqi/qt/qtbase-build/src/corelib/.rcc -I/home/liangqi/qt/qtbase-build/mkspecs/linux-g++ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/home/liangqi/qt/qtbase/src/tools/bootstrap/../../corelib/global -I/home/liangqi/qt/qtbase/src/tools/bootstrap/.. -I/home/liangqi/qt/qtbase/src/tools/bootstrap/../../3rdparty/tinycbor/src -g -std=gnu++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -ffunction-sections -fdata-sections -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -Wno-error=implicit-fallthrough -Wno-error=deprecated-copy -Wno-error=redundant-move -Wno-error=init-list-lifetime -Wno-error=format-overflow -Wno-error=stringop-overflow -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-enum-float-conversion -Wsuggest-override -ftrivial-auto-var-init=pattern -fstack-protector-strong -fstack-clash-protection -MD -MT src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o -MF src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o.d -o src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/kernel/qcoreapplication.cpp.o -c /home/liangqi/qt/qtbase/src/corelib/kernel/qcoreapplication.cpp In file included from /home/liangqi/qt/qtbase-build/include/QtCore/qcontainertools_impl.h:1, from /home/liangqi/qt/qtbase/src/corelib/tools/qarraydataops.h:9, from /home/liangqi/qt/qtbase-build/include/QtCore/qarraydataops.h:1, from /home/liangqi/qt/qtbase/src/corelib/tools/qarraydatapointer.h:7, from /home/liangqi/qt/qtbase-build/include/QtCore/qarraydatapointer.h:1, from /home/liangqi/qt/qtbase/src/corelib/text/qbytearray.h:11, from /home/liangqi/qt/qtbase-build/include/QtCore/qbytearray.h:1, from /home/liangqi/qt/qtbase/src/corelib/text/qstringview.h:9, from /home/liangqi/qt/qtbase-build/include/QtCore/qstringview.h:1, from /home/liangqi/qt/qtbase/src/corelib/text/qchar.h:664, from /home/liangqi/qt/qtbase-build/include/QtCore/qchar.h:1, from /home/liangqi/qt/qtbase/src/corelib/text/qstring.h:14, from /home/liangqi/qt/qtbase-build/include/QtCore/qstring.h:1, from /home/liangqi/qt/qtbase/src/corelib/kernel/qcoreapplication.h:8, from /home/liangqi/qt/qtbase/src/corelib/kernel/qcoreapplication.cpp:5: /home/liangqi/qt/qtbase/src/corelib/tools/qcontainertools_impl.h: In function ‘auto QtPrivate::sequential_erase_with_copy(Container&, const T&) [with Container = QList<void (*)()>; T = void (*)()]’: /home/liangqi/qt/qtbase/src/corelib/tools/qcontainertools_impl.h:383:14: error: ‘D.279326’ is used uninitialized [-Werror=uninitialized] 383 | const T &tCopy = CopyProxy(t); | ^~~~~ cc1plus: all warnings being treated as errors [12/1544] Building CXX object src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/text/qstring.cpp.o ninja: build stopped: subcommand failed.
- relates to
-
QTBUG-124193 [REG 5.15 - 6.x] QList::removeAll() causes ASan's stack-use-after-scope in some cases
-
- Closed
-
| For Gerrit Dashboard: QTBUG-123486 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 549160,4 | Suppress bogus warning from gcc 12 | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 549424,2 | Suppress bogus warning from gcc 12 | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 549463,2 | Suppress bogus warning from gcc 12 | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 549614,2 | Suppress bogus warning from gcc 12 | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |